<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Space Experience</string>
    <string name="jugar">Play</string>
    <string name="ranking">Ranking</string>
    <string name="adulto">adult</string>
    <string name="infantil">infant</string>
    <string name="facil">easy</string>
    <string name="normal">medium</string>
    <string name="dificil">hard</string>
    <string name="tiempo">Time</string>
    <string name="puntuacion">Score</string>
    <string name="type_your_name">Type Your Name:</string>
    <string name="position">Position</string>
    <string name="name">Name</string>
    <string name="medals">Medals</string>
    <string name="points">Score</string>
    <string name="historia">Hello my name is Laika and in 1957 I became the first living being to orbit the earth</string>
    <string name="historia2">... I will guide you to learn a little more about space. For each correct answer you will get a medal. Are you ready?</string>
    <string name="next">Next</string>
    <string name="historia3">Congratulations\u0020</string>
    <string name="historia4">\u0020you have obtained\u0020</string>
    <string name="historia5">\u0020points, let\'s see which character corresponds to your medals</string>
    <string name="restantes">Remaining questions\n</string>
    <string name="nivel">Level</string>
    <string name="armstrong">Your medals correspond to Neil Armstrong, the first human being to step on the moon, let\'s see your position in the ranking. Let\'s see!</string>
    <string name="gagarin">Your medals correspond to Yuri Gagarin, the first human being to orbit the earth, let\'s see your position in the ranking. Let\'s see!</string>
    <string name="tereshkova">Your medals correspond to Valentina Tereshkova, the first woman to go to space, let\'s see your position in the ranking. Let\'s see!</string>
    <string name="aldrin">Your medals correspond to Buzz Aldrin, the second human being to step on the moon, let\'s see your position in the ranking. Let\'s see!</string>
    <string name="piedra">Your medals correspond to a meteorite, let\'s see your position in the ranking. Let\'s see!</string>
    <string name="anonimo">Anonymous</string>
    <string name="aceptar">Ok</string>
    <string name="historia3mal">Oops!</string>
</resources>