<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sky">


    <ImageButton
        android:id="@+id/BtnBack"
        android:layout_width="@dimen/back"
        android:layout_height="@dimen/back"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_button"
        android:src="@drawable/back"
        android:padding="@dimen/paddingback"
        android:layout_margin="@dimen/marginflag"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/logo"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/logo_sin_fondo"
            android:contentDescription="@string/app_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btnFacil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facil"
                android:fontFamily="@font/alien"
                android:background="@drawable/rounded_button"
                android:textColor="@color/blanco"
                android:textSize="@dimen/textbotones"/>
            <Button
                android:id="@+id/btnNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:fontFamily="@font/alien"
                android:background="@drawable/rounded_button"
                android:textColor="@color/blanco"
                android:textSize="@dimen/textbotones"
                android:layout_marginTop="@dimen/marginflag"/>
            <Button
                android:id="@+id/btnDificil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dificil"
                android:fontFamily="@font/alien"
                android:background="@drawable/rounded_button"
                android:textColor="@color/blanco"
                android:textSize="@dimen/textbotones"
                android:layout_marginTop="@dimen/marginflag"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>