<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sky">

    <ImageButton
        android:id="@+id/BtnBack"
        android:layout_width="@dimen/back"
        android:layout_height="@dimen/back"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_button"
        android:src="@drawable/back"
        android:padding="@dimen/paddingback"
        android:layout_margin="@dimen/marginflag"/>

    <ImageView
        android:layout_width="@dimen/logo"
        android:layout_height="0dp"
        android:src="@drawable/logo_sin_fondo"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnAdulto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adulto"
            android:fontFamily="@font/alien"
            android:background="@drawable/rounded_button"
            android:textColor="@color/blanco"
            android:textSize="@dimen/textbotones"/>
        <Button
            android:id="@+id/btnInfantil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infantil"
            android:fontFamily="@font/alien"
            android:background="@drawable/rounded_button"
            android:textColor="@color/blanco"
            android:textSize="@dimen/textbotones"
            android:layout_marginTop="@dimen/marginflag"/>

    </LinearLayout>
</LinearLayout>