<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sky">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="@dimen/logo"
            android:layout_height="@dimen/logo"
            android:src="@drawable/logo_sin_fondo"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>
        <Button
            android:id="@+id/BtnJugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jugar"
            android:fontFamily="@font/alien"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:textColor="@color/blanco"
            android:textSize="@dimen/textbotones"/>
        <Button
            android:id="@+id/BtnRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ranking"
            android:fontFamily="@font/alien"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:textColor="@color/blanco"
            android:textSize="@dimen/textbotones"
            android:layout_marginTop="@dimen/marginflag"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right|bottom">

        <com.example.spaceexperience.ImageButtonRounded
            android:layout_width="@dimen/flag"
            android:layout_height="@dimen/flag"
            android:src="@drawable/ca"
            android:background="@null"
            android:id="@+id/BtnCat"
            android:layout_margin="@dimen/marginflag"/>

        <com.example.spaceexperience.ImageButtonRounded
            android:layout_width="@dimen/flag"
            android:layout_height="@dimen/flag"
            android:src="@drawable/es"
            android:background="@null"
            android:id="@+id/BtnES"
            android:layout_margin="@dimen/marginflag"/>

        <com.example.spaceexperience.ImageButtonRounded
            android:layout_width="@dimen/flag"
            android:layout_height="@dimen/flag"
            android:src="@drawable/en"
            android:background="@null"
            android:id="@+id/BtnEN"
            android:layout_margin="@dimen/marginflag"/>

    </LinearLayout>
</LinearLayout>